--- a/WebdevPhotoblog.html
+++ b/WebdevPhotoblog.html
@@ -7,7 +7,9 @@
 <body>
 
 
-<h1 class="heading1">A Purrfect Photo Gallery by<em><strong> Kervens Jasmin</strong></em></h1>
+<h1 class="heading1">A Purrfect Photo Gallery by:<em><strong> Kervens Jasmin</strong></em></h1>
+
+<h3>I do not own these pictures.</h3>
 
 
 <div>
@@ -23,7 +25,6 @@
 
 <div>
 	
-
 </div>
 
 <div>
@@ -35,6 +36,32 @@
 
 </div>
 
+<div class="text1">
+	<p><em>A ghost, though invisible, still is like a place
+your sight can knock on, echoing; but here
+within this thick black pelt, your strongest gaze
+will be absorbed and utterly disappear:</p>
+
+<p>just as a raving madman, when nothing else
+can ease him, charges into his dark night
+howling, pounds on the padded wall, and feels
+the rage being taken in and pacified.</p>
+
+<p>She seems to hide all looks that have ever fallen
+into her, so that, like an audience,
+she can look them over, menacing and sullen,
+and curl to sleep with them. But all at once</p>
+
+<p>as if awakened, she turns her face to yours;
+and with a shock, you see yourself, tiny,
+inside the golden amber of her eyeballs
+suspended, like a prehistoric fly.</p></em> 
+
+<p class="text2">By:<em>Rainer Maria Rilke</em></p>
+
+
+
+</div>
 
 </body>
 </html>
