--- a/WebdevPhotoblog.html
+++ b/WebdevPhotoblog.html
@@ -9,7 +9,7 @@
 
 <h1 class="heading1">A Purrfect Photo Gallery by:<em><strong> Kervens Jasmin</strong></em></h1>
 
-<h3>I do not own these pictures.</h3>
+<h3>I do not own of these pictures.</h3>
 
 
 <div>
